[flake8]
exclude=./.eggs,
        ./build/,

[doc8]
max-line-length = 2000
ignore-path = ./node_modules,./src/*.egg-info/,./docs/build/spelling/output.txt,./.eggs,./src/*/_setuptools_scm_version.txt

[pydocstyle]
# No summary lines
#   - D200
#   - D205
#   - D400
# We don't want blank lines before class docstrings
#   - D203
# We don't need docstrings to start at the first line
#   - D212
# Allow blank lines after function docstrings
#   - D202
# Section names do not need to end in newlines
#   - D406
# Section names do not need dashed underlines
#   - D407
# Click uses \b to stop wrapping, so we must allow backslashes in docstrings
#   - D301
# No blank line is needed after the last section
# We do not care about the imperative mood.
#   - D401
# We allow multi-line starts so we do not need the first line to end with
# punctuation
#   - D415
ignore = D200,D202,D203,D205,D212,D400,D406,D407,D413,D301,D401,D415

[metadata]
name = requests-mock-flask
description = 'Helpers to use requests_mock and responses with a Flask test client.'
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT License
keywords = requests mock flask
classifiers =
    Operating System :: POSIX
    Environment :: Web Environment
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
url = https://github.com/adamtheturtle/requests-mock-flask
author = Adam Dangoor
author_email = adamdangoor@gmail.com

[options]
zip_safe = False
include_package_data = True
# Avoid dependency links because they are not supported by Read The Docs.
#
# Also, they require users to use ``--process-dependency-links``.
dependency_links =
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
