[flake8]
exclude=./.eggs,
        ./build/,

[metadata]
name = requests-mock-flask
description = 'Helpers to use requests_mock and responses with a Flask test client.'
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT License
keywords = requests mock flask
classifiers =
    Operating System :: POSIX
    Environment :: Web Environment
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
url = https://github.com/adamtheturtle/requests-mock-flask
author = Adam Dangoor
author_email = adamdangoor@gmail.com

[options]
zip_safe = False
include_package_data = True
# Avoid dependency links because they are not supported by Read The Docs.
#
# Also, they require users to use ``--process-dependency-links``.
dependency_links =
package_dir=
    =src
packages=find:
python_requires = >=3.11

[options.packages.find]
where=src
